# crossroad-blues

./: Cargo.toml  web-build.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  release.yaml
assets/: credits.cr.yaml  levels.lvl.yaml
assets/fonts/: LICENSE.md
assets/models/: ground-meshes.blend  ground-meshes.blend1  ground-meshes.fbx  meshes.gltf
game_dynamic/: Cargo.toml
game_dynamic/src/: lib.rs
src/: app_state.rs  assets.rs  lib.rs  main.rs
src/in_game/: actions.rs  angelic_archers.rs  checkpoints.rs  danger.rs  devils.rs  divine_detonator.rs  game_completed.rs  game_over.rs  game_state.rs  generate_level.rs  guardian_angel.rs  holy_hulk.rs  in_game_text.rs  lumbering_devil.rs  mod.rs  movement.rs  pause_screen.rs  person.rs  player.rs  ritual.rs  schedule.rs  shadow.rs  souls.rs  stealthy_seraphim.rs  teleport.rs
src/menus/: credits.rs  game_title.rs  levels.rs  menu.rs  mod.rs  next_level.rs
src/ui/: colors.rs
src/ui/classes/: base_classes.rs
