[package]
name = "game_dynamic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossroad-blues = { path = "../" }
dexterous_developer = "0.0.9"
bevy = { version = "0.11", default-features = false }

[lib]
name = "game_dynamic"
crate-type = ["dylib"]
path = "src/lib.rs"
